2012-11-26  Karl Berry  <karl@gnu.org>

	* pretest 4.13.91.

2012-11-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: consistently use "uppercase" and "lowercase",
	rather than with spaces or dashes.
	
	* system.h (const): do not #undef around gettext.h.
	Suggested by Eli.  We'll see.

2012-11-16  Eli Zaretskii  <eliz@gnu.org>
	
	* info/pcterm.c (gettextinfo): exit rather than xexit.
	(tputs, tgoto, tgetent): use const.
	* info/session.c [!FIONREAD]: require F_GETFL and F_SETFL as well
	as O_NDELAY for this branch.
	* info/terminal.c (tputs) [! HAVE_TERMCAP_H]: declare puts as
	returning int.

2012-11-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (makeinfo Pointer Creation): be more
	explicit about what to do.  Suggestion from Richard Jackson,
	help-texinfo 18 Feb 2003 23:54:07.

2012-11-22  Patrice Dumas  <pertusus@free.fr>

	* */*.pl */Makefile.am: use #! /usr/bin/env perl for shebangs in case
	perl is not in /usr/bin.
	Subbstitute $(PERL) in the shebang for scripts that are modified
	using configure generated values.
	* man/Makefile.am: remove $(srcdir) from targets.

2012-11-20  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Common.pm, Texinfo/Parser.pm, 
	doc/texinfo.txi (Other Customization Variables): if 
	IGNORE_SPACE_AFTER_BRACED_COMMAND_NAME is set (the default case),
	spaces after an @-command name that take braces are ignored.
	Report from John Darrington.

2012-11-17  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, Pod-Simple-Texinfo/Makefile.am, doc/tp_api/Makefile.am:
	new conditionals, BUILD_PERL_API_TEXI and POD_SIMPLE_TEXINFO_TESTS to
	avoid rebuilding the texinfo files from pod documentnation if 
	Pod::Simple::PullParser, and avoid running the Pod-Simple-Texinfo tests
	if Test::More is not present.

2012-11-17  Sergey Poznyakoff  <gray@gnu.org>

	Use the text attribute to represent "image" tag.
	Provide a general-purpose solution, so new tags can be easily
	added.

	This fixes bug #37686.

	* info/tag.c: New file